compiler/test_files/typing/bad/testfile-arrow-2.psc

i32 main() { i32 x; x.a; }
